<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layer_id_login"
    android:background="@drawable/login"
    tools:context="com.app.mohamedgomaa.smartpan.Login_Register">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Linear_Login"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/splash"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        />
    <EditText
        android:id="@+id/id_login_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:background="@drawable/draw1"
        android:layout_margin="10sp"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:textColor="#170458"
        android:textSize="26sp"
        android:inputType="text"
            />
    <EditText
        android:id="@+id/id_login_user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/draw1"
        android:layout_margin="10sp"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:textColor="#170458"
        android:textSize="26sp"
        android:inputType="textPassword"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="20dp"
        >
        <Button
            android:id="@+id/id_Login_btn_login"
            android:layout_width="match_parent"
            android:layout_marginRight="10sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/draw_btn"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="22sp"
            android:onClick="Login"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="#fff"
            />
        <Button
            android:id="@+id/id_Login_btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10sp"
            android:background="@drawable/draw_btn2"
            android:text="@string/signin"
            android:textColor="#fff"
            android:textSize="22sp"
            android:onClick="SignIn"
            android:textStyle="italic"
            />
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="GoogleBtn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:textColor="#fff"
        android:padding="10sp"
        android:textSize="18sp"
        android:id="@+id/id_login_forget"
        android:onClick="ForgetPassword"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/Linear_Register"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="Back"
            app:fabSize="mini"
            app:srcCompat="?android:attr/actionModeCloseDrawable" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:src="@drawable/splash"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            />


        <EditText
            android:id="@+id/id_Reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@drawable/draw1"
            android:layout_margin="10sp"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:textColor="#170458"
            android:textSize="26sp"
            android:inputType="text"

            />

            <EditText
                android:id="@+id/id_Reg_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"

                android:background="@drawable/draw1"
                android:layout_margin="10sp"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:textColor="#170458"
                android:paddingBottom="5sp"
                android:inputType="text"
                android:textSize="26sp" />


            <EditText
                android:id="@+id/id_Reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@drawable/draw1"
                android:layout_margin="10sp"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:inputType="textPassword"
                android:paddingBottom="5sp"
                android:textColor="#170458"
                android:textSize="26sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_Reg_user_mail"
                android:background="@drawable/draw1"
                android:layout_margin="10sp"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:textColor="#170458"
                android:textSize="26sp"
                android:inputType="textEmailAddress"
                android:hint="@string/mail"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_Reg_user_mobile"
                android:background="@drawable/draw1"
                android:layout_margin="10sp"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:textColor="#170458"
                android:textSize="26sp"
                android:hint="@string/mobile"
                android:inputType="phone"

                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="#fff"
                android:textSize="20dp"
                />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_Gender"
                >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:id="@+id/male"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/famle"
                    android:id="@+id/female"
                    />
            </RadioGroup>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="#fff"
            android:textSize="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/draw_btn2"
            android:onClick="Sign_In_Reg"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/Linear_Forget"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
       >

        <EditText
            android:id="@+id/id_Forget_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Email"
            android:background="@drawable/draw1"
            android:layout_margin="10sp"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:textColor="#170458"
            android:textSize="26sp"
            android:inputType="text"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_email"
            android:textColor="#fff"
            android:textSize="25sp"
            android:id="@+id/id_forget_btn_check"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:onClick="Check_Email"
            android:background="@drawable/draw_btn2"
            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="Back"
            app:fabSize="mini"
            app:srcCompat="?android:attr/actionModeCloseDrawable" />
        <TextView
            android:id="@+id/id_forget_result"
            android:layout_marginTop="50sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            />

    </LinearLayout>

</RelativeLayout>
